# sorter-v2

./: .gitattributes  README.md
software/client/: api_only.py  blob_manager.py  chute_calibrate.py  coordinator.py  global_config.py  logger.py  main.py  manual_feeder.py  motor_calibrate.py  parts_with_categories.json  pyproject.toml  requirements.txt  runtime_variables.py  sorter_controller.py  sorting_profile.py  stepper_calibrate.py  telemetry.py
software/client/bricklink/: api.py  auth.py  types.py
software/client/classification/: __init__.py  brickognize.py  brickognize_types.py
software/client/defs/: __init__.py  consts.py  events.py  sorter_controller.py
software/client/hardware/: bus.py  cobs.py  sorter_hardware.py  sorter_hardware_config.toml  sorter_interface.py  system_config.toml
software/client/irl/: __init__.py  bin_layout.py  config.py  dc_motor.py  device_discovery.py  mcu.py  servo.py  stepper.py
software/client/irl/camera/: camera_id.py
software/client/message_queue/: handler.py
software/client/scripts/: camera_setup.py
software/client/server/: api.py
software/client/states/: __init__.py  base_state.py  istate_machine.py
software/client/subsystems/: __init__.py  base_subsystem.py  shared_variables.py
software/client/subsystems/classification/: __init__.py  carousel.py  classifying.py  detecting.py  idle.py  known_object.py  rotating.py  snapping.py  state_machine.py  states.py
software/client/utils/: pick_menu.py
software/client/vision/: __init__.py  camera.py  inference.py  types.py  utils.py  vision_manager.py
(+103 files in other folders)
